[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/characters/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/levels/level1/Level1.gd" type="Script" id=2]
[ext_resource path="res://src/ui/pauseMenu/pauseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/levels/level1/Level1Landscape.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/ui/inventory/Inventory.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/ui/HUD/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/ui/gameOverWindow/WindowGameOver.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/ui/winWindow/WinWindow.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/ui/visualHit/Hit.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/ui/hint/Hint.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 56 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 56 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 48 )

[node name="Level1" type="Node2D"]
script = ExtResource( 2 )

[node name="Level1Landscape" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 664 )

[node name="Menu" type="CanvasLayer" parent="."]

[node name="HUD" parent="Menu" instance=ExtResource( 6 )]

[node name="WindowGameOver" parent="." instance=ExtResource( 7 )]

[node name="WinWindow" parent="." instance=ExtResource( 8 )]

[node name="Inventory" parent="." instance=ExtResource( 5 )]

[node name="PauseMenu" parent="." instance=ExtResource( 3 )]

[node name="Hit" parent="." instance=ExtResource( 9 )]

[node name="Hints" type="Node2D" parent="."]

[node name="Hint1" parent="Hints" instance=ExtResource( 10 )]
position = Vector2( 592, 616 )
scale = Vector2( 0.3, 0.3 )
text = "You have fallen into a hole during a battle in the caves. You have lost all your Ignis weapons. Come close to the torch and press E to take it"

[node name="Hint2" parent="Hints" instance=ExtResource( 10 )]
position = Vector2( 600, 616 )
scale = Vector2( 0.3, 0.3 )
text = "Now you have your first Ignis. Use it to light your path and find a way out of here"

[node name="Hint3" parent="Hints" instance=ExtResource( 10 )]
position = Vector2( 856, 616 )
scale = Vector2( 0.25, 0.25 )
text = "Press E near fireless torch to activate it. Press E near activated torch to put it out"

[node name="Hint4" parent="Hints" instance=ExtResource( 10 )]
position = Vector2( 1088, 632 )
scale = Vector2( 0.25, 0.25 )
text = "Your Ignis has lives, which are presented by yellow scale in the upper part of the screen. Less lives means fainter and weaker your light. You can press R near activated stronger torch to restore your Ignis lives. It also works in reverse. Try to press R near this weak torch"

[node name="Hint5" parent="Hints" instance=ExtResource( 10 )]
position = Vector2( 784, 512 )
scale = Vector2( 0.25, 0.25 )
text = "These torches will give you hints "

[node name="Hint6" parent="Hints" instance=ExtResource( 10 )]
position = Vector2( 1280, 272 )
scale = Vector2( 0.25, 0.25 )
text = "There is a door ahead. It is controlled by torch on the pillar. Activate it to open the door, deactivate it to close the door"

[node name="Timer" type="Timer" parent="Hints"]
wait_time = 0.3
one_shot = true

[node name="Areas" type="Node2D" parent="."]

[node name="Rocks" type="Area2D" parent="Areas"]
position = Vector2( 512, 724 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Rocks"]
shape = SubResource( 1 )

[node name="Torch" type="Area2D" parent="Areas"]
position = Vector2( 816, 672 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Torch"]
shape = SubResource( 2 )

[node name="Torch2" type="Area2D" parent="Areas"]
position = Vector2( 1048, 688 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Torch2"]
shape = SubResource( 3 )

[node name="Door" type="Area2D" parent="Areas"]
position = Vector2( 1461, 312 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Door"]
shape = SubResource( 4 )
[connection signal="hint_activate" from="Level1Landscape" to="." method="_on_Level1Landscape_hint_activate"]
[connection signal="hint_disactivate" from="Level1Landscape" to="." method="_on_Level1Landscape_hint_disactivate"]
[connection signal="player_stop" from="Level1Landscape" to="." method="_on_Level1Landscape_player_stop"]
[connection signal="body_entered" from="Areas/Rocks" to="." method="_on_Rocks_body_entered"]
[connection signal="body_entered" from="Areas/Torch" to="." method="_on_Torch_body_entered"]
[connection signal="body_entered" from="Areas/Torch2" to="." method="_on_Torch2_body_entered"]
[connection signal="body_entered" from="Areas/Door" to="." method="_on_Door_body_entered"]
